# kbibtex

./: .arcconfig  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  CMakeLists.txt  ChangeLog  Mainpage.dox  Messages.sh  README  README.md  TODO  TODO.md  create-apidox.sh  create-git-release.sh  create-release.sh  dbus-example.py  download-po-files-from-websvn.sh  extract-messages.sh  format_source_files.sh  kbibtex.appdata.xml  kbibtex.categories  obfuscate.py
mime/: CMakeLists.txt  XmlMessages.sh  bibliography.xml
src/: CMakeLists.txt  config.h.in  getgit.cmake  getsvn.cmake  kbibtexnamespace.h  preferences.h
src/config/: CMakeLists.txt  bibtexentries.cpp  bibtexentries.h  bibtexfields.cpp  bibtexfields.h  kbibtexconfig_export.h  logging_config.cpp  logging_config.h  notificationhub.cpp  notificationhub.h  preferences-generator.py  preferences.cpp  preferences.h  preferences.json  preferences.json.license
src/data/: CMakeLists.txt  comment.cpp  comment.h  element.cpp  element.h  entry.cpp  entry.h  file.cpp  file.h  kbibtexdata_export.h  logging_data.cpp  logging_data.h  macro.cpp  macro.h  preamble.cpp  preamble.h  value.cpp  value.h
src/global/: CMakeLists.txt  kbibtex.cpp  kbibtex.h  logging_global.cpp  logging_global.h  preferences-generator.py  preferences.cpp  preferences.h  preferences.json
src/gui/: CMakeLists.txt  bibtexeditor.cpp  bibtexeditor.h  bibtexeditorinterface.h  clipboard.cpp  clipboard.h  delayedexecutiontimer.cpp  delayedexecutiontimer.h  findpdf.cpp  findpdf.h  guihelper.cpp  guihelper.h  italictextitemmodel.cpp  italictextitemmodel.h  kbibtexgui_export.h  logging_gui.cpp  logging_gui.h  main.cpp  mainwindow.cpp  mainwindow.h  valuelist.cpp  valuelist.h  valuelistmodel.cpp  valuelistmodel.h
src/io/: CMakeLists.txt  bibutils.cpp  bibutils.h  encoder.cpp  encoder.h  encoderlatex.cpp  encoderlatex.h  encoderutf8.cpp  encoderutf8.h  encoderxml.cpp  encoderxml.h  fileexporter.cpp  fileexporter.h  fileexporter_p.h  fileexporterbibtex.cpp  fileexporterbibtex.h  fileexporterbibtex2html.cpp  fileexporterbibtex2html.h  fileexporterbibtexoutput.cpp  fileexporterbibtexoutput.h  fileexporterbibutils.cpp  fileexporterbibutils.h  fileexporterblg.cpp  fileexporterblg.h  fileexporterpdf.cpp  fileexporterpdf.h  fileexporterps.cpp  fileexporterps.h  fileexporterris.cpp  fileexporterris.h  fileexporterrtf.cpp  fileexporterrtf.h  fileexportertoolchain.cpp  fileexportertoolchain.h  fileexporterwordbibxml.cpp  fileexporterwordbibxml.h  fileexporterxml.cpp  fileexporterxml.h  fileexporterxslt.cpp  fileexporterxslt.h  (+24 more)
src/kirigami2/: CMakeLists.txt  bibliographymodel.cpp  bibliographymodel.h  main.cpp  resources.qrc  searchenginelist.cpp  searchenginelist.h
src/libkbibtexio/: CMakeLists.txt  comment.cpp  comment.h  element.cpp  element.h  encoder.cpp  encoder.h  encoderlatex.cpp  encoderlatex.h  encoderutf8.cpp  encoderutf8.h  encoderxml.cpp  encoderxml.h  entry.cpp  entry.h  entryfield.cpp  entryfield.h  field.cpp  field.h  file.cpp  file.h  fileexporter.cpp  fileexporter.h  fileexporterbibtex.cpp  fileexporterbibtex.h  fileexporterbibtex2html.cpp  fileexporterbibtex2html.h  fileexporterblg.cpp  fileexporterblg.h  fileexporterpdf.cpp  fileexporterpdf.h  fileexporterps.cpp  fileexporterps.h  fileexporterris.cpp  fileexporterris.h  fileexporterrtf.cpp  fileexporterrtf.h  fileexportertoolchain.cpp  fileexportertoolchain.h  fileexporterxml.cpp  (+27 more)
src/networking/: CMakeLists.txt  associatedfiles.cpp  associatedfiles.h  faviconlocator.cpp  faviconlocator.h  findpdf.cpp  findpdf.h  httpequivcookiejar.cpp  httpequivcookiejar.h  internalnetworkaccessmanager.cpp  internalnetworkaccessmanager.h  kbibtexnetworking_export.h  logging_networking.cpp  logging_networking.h  urlchecker.cpp  urlchecker.h
src/onlinesearch/: CMakeLists.txt  kbibtexos_export.h  onlinesearchabstract.cpp  onlinesearchabstract.h  onlinesearchacmportal.cpp  onlinesearchacmportal.h  onlinesearcharxiv.cpp  onlinesearcharxiv.h  onlinesearchbibsonomy.cpp  onlinesearchbibsonomy.h  onlinesearchgeneral.h  onlinesearchgooglescholar.cpp  onlinesearchgooglescholar.h  onlinesearchieeexplore.cpp  onlinesearchieeexplore.h  onlinesearchjstor.cpp  onlinesearchjstor.h  onlinesearchpubmed.cpp  onlinesearchpubmed.h  onlinesearchsciencedirect.cpp  onlinesearchsciencedirect.h  onlinesearchspringerlink.cpp  onlinesearchspringerlink.h
src/parts/: CMakeLists.txt  browserextension.cpp  browserextension.h  kbibtexpart.desktop  kbibtexpart.desktop.in  kbibtexpart.json.in  kbibtexpartui.rc  logging_parts.cpp  logging_parts.h  part.cpp  part.h  part.qrc  partadaptor.cpp  partadaptor.h  partfactory.cpp  partfactory.h
src/processing/: CMakeLists.txt  bibliographyservice.cpp  bibliographyservice.h  checkbibtex.cpp  checkbibtex.h  findduplicates.cpp  findduplicates.h  idsuggestions.cpp  idsuggestions.h  journalabbreviations.cpp  journalabbreviations.h  kbibtexproc_export.h  logging_processing.cpp  logging_processing.h  lyx.cpp  lyx.h  lyx.rc
src/program/: CMakeLists.txt  README  about.cpp  about.h  commandline.cpp  documentlist.cpp  documentlist.h  elementform.cpp  elementform.h  kbibtex.desktop  kbibtexui.rc  logging_program.cpp  logging_program.h  main.cpp  mainwindow.cpp  mainwindow.h  mdiwidget.cpp  mdiwidget.h  openfileinfo.cpp  openfileinfo.h  openfileinfoadaptor.cpp  openfileinfoadaptor.h  org.kde.kbibtex.appdata.xml  org.kde.kbibtex.desktop  program.cpp  program.h  program.qrc  referencepreview.cpp  referencepreview.h  searchform.cpp  searchform.h  searchresults.cpp  searchresults.h  urlpreview.cpp  urlpreview.h  valuelist.cpp  valuelist.h
src/test/: CMakeLists.txt  kbibtexdatatest.cpp  kbibtexfilestest-rawdata.h  kbibtexfilestest.cpp  kbibtexguitest.cpp  (+8 more)
xslt/: CMakeLists.txt  abstractonly.xsl  arxiv2bibtex.xsl  fancy.xsl  ieeexplore2bibtex.xsl  ieeexploreapiv1-to-bibtex.xsl  isbndb2bibtex.xsl  oaizbpreview-to-bibtex.xsl  pam2bibtex.xsl  pubmed2bibtex.xsl  sciencedirectsearchapi-to-bibtex.xsl  standard.xsl  wikipedia-cite.xsl  worldcatdc2bibtex.xsl  worldcatopensearch2bibtex.xsl  zoteroitems2bibtex.xsl
(+509 files in other folders)
